--- a/UserRegistration.html
+++ b/UserRegistration.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <h1>Registration Form</h1>
+  <h1>User Registration Form</h1>
 </head>
 <body>
   <script>
     const CHECK_NAME = /^[A-Za-z0-9 ]{3,20}$/;
     const CHECK_EMAIL = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i
     const CHECK_MOBILE_NUMBER = /^[0-9]{1,3}[ ][0-9]{10}$/;
+    const CHECK_PASSWORD = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$/;
     function check(myform){
       if (!CHECK_NAME.test(myform.firstName.value))
       {
@@ -19,14 +20,19 @@
         alert("Enter Valid Last Name...");
         return false;
       }
-      if (!CHECK_EMAIL.test(myform.mobileNumber.value))
+      if (!CHECK_EMAIL.test(myform.email.value))
       {
-        alert("Enter Valid Last Name...");
+        alert("Enter Valid Email...");
         return false;
       }
       if (!CHECK_MOBILE_NUMBER.test(myform.mobileNumber.value))
       {
-        alert("Enter Valid Last Name...");
+        alert("Enter Valid Mobile Number...");
+        return false;
+      }
+      if (!CHECK_PASSWORD.test(myform.password.value))
+      {
+        alert("Enter Valid Password...");
         return false;
       }
     }
@@ -44,6 +50,9 @@
   </p>
   <p> Mobile Number :
     <input type="text" size="30" name="mobileNumber" /> </p>
+  </p>
+  <p> Password :
+    <input type="text" size="30" name="password" /> </p>
   </p>
   <p>
     <input type="submit" value="Submit" />
